# cpp-rlimgui-template

./: .gitignore  CMakeLists.txt  README.md
include/: main.h
scripts/: build_release.bat  build_release.sh  generate_visual_studio.bat  setup_mac.sh  setup_windows.bat
source/: main.cpp
src/: main.cpp
